--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -4,6 +4,7 @@
   --background-active: #323233;
   --background-toolbar: #29292D;
   --background-input: #1e1e1e;
+  --background-track: #000;
   --content-border-color: #222;
   --content-border-radius: 10px;
   --content-inline-padding: 20px;
