--- a/src/assets/stylesheets/modules/shared.module.scss
+++ b/src/assets/stylesheets/modules/shared.module.scss
@@ -94,6 +94,15 @@
   }
 }
 
+.__mantine {
+  &--tooltip {
+    background-color: var(--background-active);
+    border: 1px solid var(--background-secondary);
+    box-shadow: 0 0 10px black;
+    color: var(--text-primary);
+  }
+}
+
 @container toolbar (width < 900px) {
   .toolbar__description {
     max-width: 30%;
