--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -19,6 +19,7 @@
   --text-tertiary: #7b7580;
   --text-disabled: #4b494e;
   --text-highlight: #bc77ec;
+  --text-highlight-alt: #7787ec;
   --table-border-color: #3B3B3B;
   --font-default: inter, system-ui, "Segoe UI", roboto, helvetica, arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-monospace: "Chivo Mono", "Courier New", courier, monospace;
