--- a/src/assets/stylesheets/modules/timeline.module.scss
+++ b/src/assets/stylesheets/modules/timeline.module.scss
@@ -46,6 +46,7 @@
   height: 60px;
   max-width: 100%;
   overflow: hidden;
+  padding-right: 2px;
   width: 100%;
 
   &--seek {
@@ -77,9 +78,32 @@
   box-shadow: 0 0 10px var(--background-primary);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 3;
 
   &__spacer {
     background: var(--background-primary);
+  }
+}
+
+.scale-bar-container {
+  background: var(--background-primary);
+  bottom: 0;
+  height: 60px;
+  position: sticky;
+  z-index: 3;
+
+  --text-highlight: var(--text-highlight-alt);
+
+  &__label {
+    align-items: center;
+    background: var(--background-primary);
+    display: flex;
+    font-family: var(--font-monospace);
+    font-size: 11px;
+    font-weight: 500;
+    gap: 5px;
+    height: 100%;
+    justify-content: center;
+    padding-inline: 0;
   }
 }
