--- a/src/assets/stylesheets/modules/video.module.scss
+++ b/src/assets/stylesheets/modules/video.module.scss
@@ -94,9 +94,17 @@
   }
 
   &__button {
+    align-items: center;
+    display: flex;
     height: 30px;
-    padding: 5px;
+    justify-content: center;
+    padding: 3px;
     width: 30px;
+
+    svg {
+      height: 100%;
+      width: 100%;
+    }
   }
 
   &__spacer {
@@ -105,12 +113,7 @@
 }
 
 .play-pause {
-  align-items: center;
-  display: flex;
-  height: 30px;
-  justify-content: center;
   position: relative;
-  width: 30px;
 
   &__icon {
     opacity: 0;
@@ -128,6 +131,11 @@
     .play-pause__pause {
       opacity: 1;
     }
+  }
+
+  svg {
+    height: 25px;
+    width: 25px;
   }
 }
 
