--- a/src/assets/stylesheets/modules/timeline.module.scss
+++ b/src/assets/stylesheets/modules/timeline.module.scss
@@ -19,6 +19,8 @@
     max-height: calc(100% - 90px);
     min-height: 0;
     overflow-y: auto;
+    overscroll-behavior: none;
+    overscroll-behavior-y: contain;
     position: relative;
   }
 }
@@ -92,7 +94,8 @@
   position: sticky;
   z-index: 3;
 
-  --text-highlight: var(--text-highlight-alt);
+  --slider-color: var(--text-highlight-secondary);
+  --slider-indicator-color: var(--text-highlight);
 
   &__label {
     align-items: center;
@@ -105,5 +108,11 @@
     height: 100%;
     justify-content: center;
     padding-inline: 0;
+  }
+}
+
+.scale-bar {
+  &__current-time {
+    background: var(--text-highlight--default) !important;
   }
 }
