--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -19,10 +19,12 @@
   --text-tertiary: #7b7580;
   --text-disabled: #4b494e;
   --text-highlight: #bc77ec;
-  --text-highlight-alt: #7787ec;
+  --text-highlight-secondary: #7787ec;
   --table-border-color: #3B3B3B;
   --font-default: inter, system-ui, "Segoe UI", roboto, helvetica, arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-monospace: "Chivo Mono", "Courier New", courier, monospace;
+  --slider-color: var(--text-highlight);
+  --slider-indicator-color: var(--text-highlight-secondary);
 
   @keyframes fadein {
     from { opacity: 0; }
