--- a/src/assets/stylesheets/modules/video.module.scss
+++ b/src/assets/stylesheets/modules/video.module.scss
@@ -42,7 +42,6 @@
   position: relative;
   width: 100%;
 
-
   &:hover {
     .video-controls {
       opacity: 1;
@@ -74,11 +73,12 @@
   gap: 10px;
   min-height: 50px;
   opacity: 0.5;
-  padding: 10px;
+  padding: 0 10px;
   position: absolute;
   transition: opacity 0.5s ease;
   transition-delay: 0.5s;
   width: 100%;
+  z-index: 2;
 
   &:global {
     animation: 1s fadein ease;
