--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -50,6 +50,10 @@
       transition: color 0.25s ease, background-color 0.3s ease;
     }
   }
+
+  &:disabled {
+    opacity: 0.5;
+  }
 }
 
 .input {
