--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -90,6 +90,12 @@
   padding: 5px 10px;
   transition: background-color 0.1s ease;
 
+  &:hover {
+    &:not(.track--selected) {
+      background-color: var(--background-secondary);
+    }
+  }
+
   &--selected {
     background-color: var(--background-active);
   }
@@ -124,21 +130,40 @@
 
 .tag {
   align-items: center;
-  background-color: var(--background-toolbar);
+  background-color: var(--background-tag);
   border-radius: 5px;
   display: flex;
   gap: 15px;
   height: 70px;
+  justify-content: space-between;
   max-width: 100%;
   overflow: hidden;
   padding-left: 15px;
   position: relative;
+  transition: background-color 0.25s ease;
   width: 100%;
+
+  &__left {
+    align-items: center;
+    border-radius: 5px;
+    display: flex;
+    gap: 15px;
+    height: 100%;
+    max-width: 100%;
+  }
 
   &--thumbnail {
     .tag__content {
-      max-width: calc(var(--panel-width) - 200px);
+      max-width: calc(var(--panel-width) - 250px);
     }
+  }
+
+  &--hover {
+    background-color: var(--background-tag--hover);
+  }
+
+  &--selected {
+    background-color: var(--background-tag--selected);
   }
 
   &__tooltip {
@@ -161,7 +186,7 @@
 
   &__content {
     font-size: 12px;
-    max-width: calc(var(--panel-width) - 100px);
+    max-width: calc(var(--panel-width) - 150px);
     overflow: hidden;
     text-overflow: ellipsis;
     user-select: none;
@@ -184,5 +209,13 @@
     font-family: var(--font-monospace);
     font-size: 12px;
     gap: 5px;
+  }
+
+  &__actions {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    padding-inline: 20px;
   }
 }
