--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -5,6 +5,7 @@
   --background-toolbar: #29292D;
   --background-input: #1e1e1e;
   --background-track: #000;
+  --background-switch-active: #4a4a4b;
   --content-border-color: #222;
   --content-border-radius: 5px;
   --content-inline-padding: 20px;
