--- a/src/static/stylesheets/assets.scss
+++ b/src/static/stylesheets/assets.scss
@@ -64,6 +64,8 @@ $grid-icon-width: 15rem;
     height: 100%;
     object-fit: contain;
     width: 100%;
+    max-height: 100%;
+    overflow: hidden;
   }
 
   img {
