--- a/src/static/stylesheets/assets.scss
+++ b/src/static/stylesheets/assets.scss
@@ -1,4 +1,4 @@
-$grid-icon-width: 15rem;
+$grid-icon-width: 13vw;
 
 .assets-page {
   flex: 1 1 auto;
@@ -45,6 +45,7 @@ $grid-icon-width: 15rem;
   .asset-title {
     align-items: center;
     display: flex;
+    font-size: 11px;
     justify-content: center;
     max-width: 100%;
     padding: 0 $elv-spacing-l 0 $elv-spacing-xs;
@@ -62,10 +63,10 @@ $grid-icon-width: 15rem;
 
   .asset-icon {
     height: 100%;
-    object-fit: contain;
-    width: 100%;
     max-height: 100%;
+    object-fit: contain;
     overflow: hidden;
+    width: 100%;
   }
 
   img {
@@ -114,6 +115,14 @@ $grid-icon-width: 15rem;
   }
 }
 
+.asset-list-page-buttons {
+  align-items: center;
+  display: flex;
+  font-size: $elv-font-s;
+  gap: 20px;
+  margin: 0 auto;
+}
+
 .asset-sort-filter,
 .asset-page-buttons {
   align-items: center;
@@ -136,6 +145,10 @@ $grid-icon-width: 15rem;
 }
 
 .asset-page-buttons {
+  align-items: center;
+  display: flex;
+  gap: 10px;
+
   button {
     width: 5rem;
 
@@ -146,6 +159,11 @@ $grid-icon-width: 15rem;
         background-color: $color-background;
       }
     }
+  }
+
+  .download-button {
+    padding: 3px;
+    width: max-content;
   }
 }
 
