--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -8,7 +8,9 @@ body {
 
 .page-container {
   display: flex;
-  min-height: 100vh;
+  margin-top: var(--gutter-size-y);
+  max-height: 100%;
+  min-height: calc(100vh - 50px);
   width: 100%;
 }
 
@@ -20,7 +22,7 @@ body {
   height: calc(100vh - var(--gutter-size-y));
   max-height: calc(100vh - var(--gutter-size-y));
   overflow: hidden;
-  padding: var(--gutter-size-y) var(--gutter-size-x);
+  padding: 0 var(--gutter-size-x);
   width: 100%;
 }
 
@@ -37,7 +39,7 @@ body {
   position: relative;
 }
 
-.video-panel,
+.content-panel,
 .side-panel {
   height: 100%;
   position: relative;
@@ -57,12 +59,49 @@ input {
   }
 }
 
+a,
 button {
   transition: box-shadow 0.25s ease;
   user-select: none;
 
   &:focus-visible {
-    box-shadow: 0 0 5px var(--focus-color);
+    box-shadow: 0 0 5px var(--focus-color)!important;
     outline:0;
+  }
+}
+
+.error {
+  align-items: center;
+  color: var(--text-error);
+  display: flex;
+  flex-direction: column;
+  font-weight: 600;
+  gap: 5px;
+  height: 100%;
+  justify-content: center;
+  padding-bottom: 100px;
+  width: 100%;
+
+  .button {
+    margin-top: 10px;
+  }
+
+}
+
+.button {
+  align-items: center;
+  background-color: var(--background-input);
+  border: 1px solid var(--content-border-color);
+  border-radius: 5px;
+  color: var(--text-secondary);
+  display: flex;
+  font-size: 14px;
+  height: 35px;
+  padding-inline: 20px;
+  transition: background-color 0.1s ease;
+
+  &:hover {
+    background-color: var(--background-input--active);
+    transition: background-color 0.3s ease;
   }
 }
