--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -43,7 +43,6 @@
 }
 
 .tracks {
-  height: 100%;
   max-height: 90px;
   overflow-y: hidden;
   padding: 10px;
@@ -217,5 +216,52 @@
     height: 100%;
     justify-content: center;
     padding-inline: 20px;
+  }
+}
+
+.assets {
+  align-content: start;
+  background-color: var(--background-toolbar);
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  height: 100%;
+  max-width: 100%;
+  min-height: 0;
+  overflow: hidden auto;
+  padding: 15px 10px;
+  width: 100%;
+}
+
+.asset {
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+  padding: 10px;
+  transition: background-color 0.25s ease;
+
+  &:hover {
+    background-color: var(--background-tag--hover);
+  }
+
+  &--selected {
+    background-color: var(--background-tag--selected);
+
+    &:hover {
+      background-color: var(--background-tag--selected);
+    }
+  }
+
+  &__image {
+    aspect-ratio: 1;
+    background-color: var(--background-primary);
+    object-fit: contain;
+    width: 100%;
+  }
+
+  &__name {
+    font-size: 10px;
+    font-weight: 600;
+    word-break: break-all;
   }
 }
