--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -4,13 +4,14 @@
   --background-active: #323233;
   --background-toolbar: #29292D;
   --background-input: #1e1e1e;
+  --background-input--active: #252525;
   --background-track: #000;
   --background-switch-active: #4a4a4b;
   --content-border-color: #222;
   --content-border-radius: 5px;
   --content-inline-padding: 20px;
   --gutter-size-x: 8px;
-  --gutter-size-y: 5px;
+  --gutter-size-y: 10px;
   --spinner-color: #FFF;
   --spinner-color-background: red;
   --spinner-width: 5px;
