--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -26,6 +26,17 @@ body {
   width: 100%;
 }
 
+.subcontent {
+  background: var(--background-primary);
+  display: flex;
+  flex-direction: column;
+  gap: var(--gutter-size-y) var(--gutter-size-x);
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
+  width: 100%;
+}
+
 .top {
   display: flex;
   gap: var(--gutter-size-x);
