--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -51,15 +51,18 @@
 }
 
 .tracks {
-  max-height: 90px;
+  max-height: 150px;
   overflow-y: hidden;
   padding: 10px 25px 10px 10px;
   position: relative;
   transition: max-height 0.25s ease;
+  display: flex;
+  margin-bottom: 5px;
 
   &--hover {
-    height: var(--content-height);
-    max-height: var(--content-height);
+    height: calc(var(--content-height) + 75px);
+    max-height: calc(var(--content-height) + 75px);
+    min-height: 150px;
     transition: max-height 0.15s ease;
 
     .tracks__cover {
@@ -76,6 +79,9 @@
 
   &__content {
     display: grid;
+    width: 100%;
+    padding-bottom: 5px;
+    height: max-content;
     gap: 10px;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   }
