Asset tag details

--- a/src/assets/stylesheets/reset.scss
+++ b/src/assets/stylesheets/reset.scss
@@ -87,6 +87,26 @@ u {
   }
 }
 
+* {
+  -webkit-overflow-scrolling: touch;
+
+  ::-webkit-scrollbar {
+    opacity: 1;
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #333;
+    opacity: 1;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #555;
+    border-radius: 100px;
+    opacity: 1;
+  }
+}
+
 html,
 body,
 #root,
