--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -31,6 +31,7 @@
   --background-tag: #29292D;
   --background-tag--selected: #2e2e3d;
   --background-tag--hover: #38383d;
+  --border-asset-tag-selected: #72729a;
 
   @keyframes fadein {
     from { opacity: 0; }
