--- a/src/assets/stylesheets/modules/assets.module.scss
+++ b/src/assets/stylesheets/modules/assets.module.scss
@@ -73,13 +73,29 @@
 }
 
 .asset-details {
+  display: flex;
+  gap: 10px;
+  justify-content: space-between;
   overflow-y: auto;
   padding: 15px;
+
+  &__tag-details {
+    background-color: var(--background-secondary);
+    border-radius: 5px;
+    font-size: 12px;
+    max-width: 800px;
+    overflow-y: auto;
+    padding: 10px;
+    white-space: pre-wrap;
+    width: 100%;
+  }
 }
 
 .asset-tags {
+  align-items: start;
   display: grid;
   gap: 10px;
+  height: max-content;
 
   &__track {
     display: grid;
@@ -101,24 +117,28 @@
 
 .asset-tag {
   align-items: center;
+  background-color: var(--background-toolbar);
+  border: 1px solid transparent;
   border-radius: 20px;
   display: flex;
   gap: 10px;
+  height: 30px;
   max-width: 300px;
   overflow: hidden;
   padding: 5px 15px 5px 10px;
   position: relative;
-  transition: background-color 0.1s ease;
+  transition: border 0.25s ease, background-color 0.25s ease;
   width: max-content;
 
   &:hover {
     &:not(.track--selected) {
-      background-color: var(--background-secondary);
+      background-color: var(--background-active);
     }
   }
 
   &--selected {
     background-color: var(--background-active);
+    border: 1px solid var(--border-asset-tag-selected);
   }
 
   &__color {
