--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -7,6 +7,7 @@
   --background-input--active: #252525;
   --background-track: #000;
   --background-switch-active: #4a4a4b;
+  --background-modal: #242424;
   --content-border-color: #222;
   --content-border-radius: 5px;
   --content-inline-padding: 20px;
