--- a/src/assets/stylesheets/modules/nav.module.scss
+++ b/src/assets/stylesheets/modules/nav.module.scss
@@ -13,6 +13,8 @@
     border-radius: 3px;
     color: var(--text-disabled);
     height: 55px;
+    min-height: 55px;
+    min-width: 55px;
     padding: 12px;
     width: 55px;
   }
