--- a/src/assets/stylesheets/modules/download.module.scss
+++ b/src/assets/stylesheets/modules/download.module.scss
@@ -16,6 +16,9 @@
  }
 
  .preview {
+   max-width: 100%;
+   overflow: hidden;
+
    &__header {
      font-size: 18px;
      font-weight: 600;
@@ -57,6 +60,27 @@
        font-size: 12px;
        font-weight: 600;
      }
+   }
+ }
+
+ .url {
+   margin-top: 20px;
+   max-width: 100%;
+   overflow: hidden;
+
+   &__container {
+     display: flex;
+     align-items: center;
+     gap: 10px;
+     max-width: 100%;
+   }
+
+   &__url {
+     overflow: hidden;
+     text-overflow: ellipsis;
+     white-space: nowrap;
+     font-size: 12px;
+     color: var(--text-tertiary);
    }
  }
 
@@ -233,24 +257,3 @@
    from { opacity: 0; }
    to { opacity: 1; }
  }
-
-.thumbnail-preview {
-  opacity: 0.75;
-  position: relative;
-  transition: opacity 0.25s ease;
-
-  &--hover {
-    opacity: 1;
-  }
-
-  &__previous {
-    inset: 0;
-    position: absolute;
-    z-index: 0;
-  }
-
-  &__current {
-    animation: 0.5s fadein ease forwards;
-    z-index: 1;
-  }
-}
