--- a/src/assets/stylesheets/modules/download.module.scss
+++ b/src/assets/stylesheets/modules/download.module.scss
@@ -69,18 +69,18 @@
    overflow: hidden;
 
    &__container {
-     display: flex;
      align-items: center;
+     display: flex;
      gap: 10px;
      max-width: 100%;
    }
 
    &__url {
+     color: var(--text-tertiary);
+     font-size: 12px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
-     font-size: 12px;
-     color: var(--text-tertiary);
    }
  }
 
@@ -126,100 +126,109 @@
     width: 150px;
   }
 
-  &__history {
-    display: grid;
-    gap: var(--gutter-size-y);
-    margin-top: 20px;
-    max-height: 550px;
-    overflow-y: auto;
-    padding-right: 10px;
-    position: relative;
-  }
-
-  &__history-row {
-    align-items: center;
-    background-color: var(--background-active);
-    border-radius: 5px;
-    display: grid;
-    gap: 10px;
-    grid-template-columns: 3fr 90px;
-    min-height: 35px;
-    padding: 10px;
-
-    &--highlighted {
-      .download-modal__history-row-name {
-        color: #9fbafd;
-      }
-    }
-
-    &--header {
-      background: #131315;
-      border-bottom: 1px solid green;
-      font-size: 16px;
-      font-weight: 400;
-      position: sticky;
-      top: 0;
-      z-index: 1;
-    }
-  }
-
-  &__history-row-name {
-    font-size: 12px;
-    font-weight: 600;
-    max-width: 100%;
-  }
-
-  &__history-row-duration,
-  &__history-row-status {
-    font-size: 12px;
-    margin-top: 2px;
-    opacity: 0.5;
-  }
-
-  &__history-status {
-    align-items: center;
-    display: flex;
-    height: 100%;
-    justify-content: flex-end;
-    width: 100%;
-  }
-
-  &__history-button {
-    border-radius: 6px;
-    height: 30px;
-    padding: 5px;
-    transition: background-color 0.15s ease, color 0.15s ease;
-    width: 30px;
-
-    &:hover {
-      background-color: #1a1a1a !important;
-    }
-
-    &:disabled {
-      opacity: 0.5 !important;
-      pointer: auto;
-    }
-
-    svg {
-      height: 100%;
-      width: 100%;
-    }
-  }
-
-  &__history-actions {
-    align-items: center;
-    display: flex;
-    gap: 10px;
-  }
-
   &__message {
     color: var(--text-tertiary);
     font-size: 14px;
     margin: 20px 5px 10px;
   }
+}
+
+.history {
+  display: grid;
+  gap: var(--gutter-size-y);
+  margin-top: 20px;
+  max-height: 550px;
+  overflow-y: auto;
+  padding-right: 10px;
+  position: relative;
+}
+
+.history-row {
+  align-items: center;
+  background-color: var(--background-active);
+  border-radius: 5px;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 3fr 90px;
+  height: min-content;
+  min-height: 35px;
+  padding: 10px 20px;
+  position: relative;
+
+  &--thumbnail {
+    gap: 15px;
+    grid-template-columns: 2fr 4fr 90px;
+  }
+
+  &--highlighted {
+    .download-modal__history-row-name {
+      color: #9fbafd;
+    }
+  }
+
+  &__thumbnail-container {
+    overflow: hidden;
+    width: 100%;
+  }
+
+  &--header {
+    background: #131315;
+    border-bottom: 1px solid green;
+    font-size: 16px;
+    font-weight: 400;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+
+  &__info {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__name {
+    font-size: 12px;
+    font-weight: 600;
+    max-width: 100%;
+  }
+
+  &__duration,
+  &__status {
+    font-size: 12px;
+    opacity: 0.5;
+  }
+
+  &__status {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    margin-top: 2px;
+    width: 100%;
+  }
+
+  &__actions {
+    align-items: center;
+    display: flex;
+    gap: 10px;
+    justify-content: flex-end;
+  }
+
+  &__details {
+    height: 20px;
+    min-height: 15px;
+    min-width: 15px;
+    position: absolute;
+    right: 2px;
+    top: 2px;
+    width: 20px;
+
+    * {
+      color: var(--text-tertiary);
+    }
+  }
 
   progress {
-    background-color: #000;
+    background-color: var(--background-secondary);
     border: 0;
     border-radius: 20px;
     height: 5px;
@@ -227,7 +236,7 @@
   }
 
   progress::-webkit-progress-bar {
-    background-color: #000;
+    background-color: var(--background-active);
     border: 0;
     border-radius: 20px;
     height: 5px;
@@ -248,12 +257,15 @@
   }
 }
 
- @keyframes fadeout {
-   from { opacity: 1; }
-   to { opacity: 0; }
- }
+.job-details {
+  display: grid;
+  gap:3px;
+  min-width: 250px;
+  padding: 5px;
 
- @keyframes fadein {
-   from { opacity: 0; }
-   to { opacity: 1; }
- }
+  &__detail {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+  }
+}
