--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -227,11 +227,18 @@
   }
 
   &__actions {
-    align-items: center;
+    padding: 10px 5px 10px 10px;
     display: flex;
     height: 100%;
     justify-content: center;
-    padding-inline: 20px;
+    gap: 5px;
+  }
+
+  &__action {
+    min-height: 17px;
+    min-width: 17px;
+    height: 17px;
+    width: 17px;
   }
 }
 
