--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -33,9 +33,15 @@
   --background-tag--selected: #2e2e3d;
   --background-tag--hover: #38383d;
   --border-asset-tag-selected: #72729a;
+  --animation-fadein: fadein;
 
   @keyframes fadein {
-    from { opacity: 0; }
-    to { opacity: 1; }
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
   }
 }
