--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -34,6 +34,7 @@
   --background-tag--hover: #38383d;
   --border-asset-tag-selected: #72729a;
   --animation-fadein: fadein;
+  --track-height: 45px;
 
   @keyframes fadein {
     0% {
