--- a/src/assets/stylesheets/variables.scss
+++ b/src/assets/stylesheets/variables.scss
@@ -35,6 +35,7 @@
   --border-asset-tag-selected: #72729a;
   --animation-fadein: fadein;
   --track-height: 45px;
+  --track-height--thumbnails: 60px;
 
   @keyframes fadein {
     0% {
